manifests/base/deployment.yaml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: 82238157 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82238157
  template:
    metadata:
      labels:
        app: 82238157 
    spec:
      containers:
        - name: 82238157 
          image: cepgstapacr.azurecr.io/82238157
          ports:
          - containerPort: 8080
